...
                  flex: 2,
                  child: AppCard(
                    child: Column(
                      crossAxisAlignment: CrossAxisAlignment.start,
                      children: [
                        CustomTextField(
                          label: "Objet du devis",
                          controller: _objetCtrl,
                          validator: (v) => v!.isEmpty ? "Requis" : null,
                        ),
                        const SizedBox(height: 10),
                        Row(
                          children: [
...
                          Text(_selectedClient!.ville),
                        ] else
                          const Row(
                            children: [
                              Icon(Icons.add_circle, color: AppTheme.primary),
                              SizedBox(width: 8),
                              Text("Sélectionner...",
                                  style: TextStyle(color: AppTheme.primary)),
                            ],
                          )
                      ],
                    ),
                  ),
...
